[package]
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS task management module"
edition.workspace = true
license.workspace = true
name = "ax-usb"
repository = "https://github.com/rcore-os/tgoskits"
version = "0.5.12"

[features]
default = []

[dependencies]
ax-config = { workspace = true }
ax-driver = { workspace = true, features = ["dwc2"] }
ax-errno = { workspace = true }
ax-hal = { workspace = true }
ax-io = { workspace = true }
log = { workspace = true }
ax-plat = { workspace = true }
ax-sync.workspace = true
ax-lazyinit.workspace = true
tock-registers = "0.9"
sg200x-bsp = { workspace = true }
