[package]
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS USB host protocol stack"
edition.workspace = true
license.workspace = true
name = "ax-usb"
repository = "https://github.com/rcore-os/tgoskits"
version = "0.5.12"

[features]
default = []

[dependencies]
ax-driver = { workspace = true, features = ["dwc2"] }
ax-driver-usb = { workspace = true }
ax-errno = { workspace = true }
ax-hal = { workspace = true }
ax-io = { workspace = true }
log = { workspace = true }
ax-sync.workspace = true
ax-lazyinit.workspace = true
